# reddit-find

./: .gitignore  README.md  install-skill.sh  pyproject.toml
reddit_find/: __init__.py  analyze.py  cli.py  discover.py  fetch.py
skills/reddit-find/: SKILL.md
