[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reddit-find"
version = "1.0.0"
description = "GTM research from Reddit — discover communities, extract pain points, buyer language, and content angles"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["gtm", "reddit", "research", "marketing", "sales", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
reddit-find = "reddit_find.cli:main"

[project.urls]
Homepage = "https://github.com/LeadGrowGTM/reddit-find"
Repository = "https://github.com/LeadGrowGTM/reddit-find"
Issues = "https://github.com/LeadGrowGTM/reddit-find/issues"

[tool.hatch.build.targets.wheel]
packages = ["reddit_find"]
